remove dependency
Signed-off-by: Attila Mészáros <csviri@gmail.com>